src/front/client/src/app/components/device-details/device-details.component.css
#container {
  display: flex;
  box-sizing: border-box;
}

#content {
  height: fit-content;
  width: 100vw;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

@media (max-width: 600px) {
  #container {
    flex-direction: row;
  }
  #device-details {
    display: flex;
    flex-direction: column;
  }
  #device-schedule-holder {
    margin-top: 20px;
  }
  .device-details-overlay>.device-details-edit,
  .device-details-delete {
    left: 10%;
  }

  .device-details-overlay>.device-details-delete {
    left: 10%;
  }

  #header-img>#drop-down-sett {
    right: 0;
  }
}

@media (max-width: 600px) {
  #container {
    flex-direction: column;
  }
}

#header {
  box-sizing: border-box;
  width: 100%;
  height: 60px;
  display: flex;
  align-items: center;
  padding-left: 20px;
}

#header h2 {
  color: #3e3e3e;
}

#header a {
  text-decoration: none;
  color: gray;
}

#header img {
  width: 40px;
}

#header-img {
  cursor: pointer;
}

#drop-down-sett {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  padding: 12px 16px;
  z-index: 1;
}

.drop-down-item {
  display: flex;
  align-items: center;
  width: 100%;
  height: 30px;
  cursor: pointer;
}

.drop-down-item:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

#header-img:hover #drop-down-sett {
  display: block;
}

#nav-bar {
  box-sizing: border-box;
  width: 100%;
  height: 60px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

#nav-bar h3 {
  margin-left: 30px;
  color: gray;
}

#filter {
  box-sizing: border-box;
  width: 100%;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 20px;
}

#additional-filter {
  box-sizing: border-box;
  width: 100%;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 20px;
}

#additional-filter input {
  width: 120px;
  height: 40px;
  border-radius: 10px;
  margin-right: 10px;
  border: 0px;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
}

#additional-filter select {
  width: 75px;
  height: 40px;
  border-radius: 10px;
  margin-right: 10px;
  border: 0px;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
}

#date-filter {
  display: flex;
  align-items: center;
}

#details-a {
  text-decoration: none;
  color: black;
  cursor: pointer;
}


.slider {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  height: 30px;
  width: 250px;
  border-radius: 30px;
  vertical-align: middle;
  padding: 10px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
  background-color: white !important;
}

#today,
#month,
#year,
#day1,
#day2,
#day3 {
  display: flex;
  justify-content: center;
  align-items: center;
  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  width: 27%;
  vertical-align: middle;
  color: #3E3E3E;
}

#today:hover,
#month:hover,
#year:hover,
#day1:hover,
#day2:hover,
#day3:hover {
  color: white !important;
  margin-top: 0px;
  padding: 5px;
  background-color: #3E3E3E !important;
  border-radius: 10px;
}

#chart-title {
  box-sizing: border-box;
  font-style: normal;
  font-size: 20px;

  width: 80%;

  text-align: center;
  margin-bottom: 20px;
}

#tableShow {
  text-align: center;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
}

table {
  margin-top: 10px;
  width: 100%;

  background-color: #ffff;
  text-align: center;
  border-radius: 20px;


}


/* data table za today devices */

.data-table {
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 20px;
  text-align: center;
  background-color: #fff;
  color: #333;
  margin: 0 auto;
  border-radius: 20px;
}

table {
  border-radius: 20px;
  width: 100%;
}

.data-table thead {
  background-color: #3E3E3E;
  color: #fff;
}

.data-table th,
.data-table td {
  border: 1px solid #ddd;
  padding: 10px;
}

.data-table th {
  font-weight: bold;
}

.data-table tbody tr:hover {
  background-color: #f5f5f5;
}

@media (min-width: 600px) {
  #table-container {
    margin-left: 10%;
  }
}

@media screen and (max-width: 599px) {

  body {
    overflow: auto;
  }

  h2 {
    float: left;
  }

  #today-month-year {
    margin-left: 0px;
    padding-right: 30px;
    margin-right: 10px;
  }

  #h2_device {
    float: left;
    margin-left: 10px;
  }

  #single-device-container {
    position: absolute;
    margin-top: 100px;
    width: 100vw;
    text-align: center;
  }

  #graph-container {
    max-height: 200px;
    max-width: 90%;
    overflow: auto;
    margin: 20px auto auto auto;
  }

  #export {
    position: relative;
    right: 45%;
    margin-bottom: 10px;
  }
}

